# adam

./: .env.example  .gitignore  README.md  SPECS.md  pyproject.toml
src/adam/: app.py  cache.py  config.py  history.py  llm.py  models.py  prompt.py  routes.py  skeleton.py  state.py
static/: index.html
